Added final documents - HTML pages, Flask API, Plotly JS.

--- a/templates/Plots.html
+++ b/templates/Plots.html
@@ -45,7 +45,18 @@
       <div class="hero text-center">
         <h1></h1>
       </div>
-
+    <div class="container-fluid">
+          <div class="row margin-top-50">
+            <div id="subplots"></div>
+            <script src="../static/js/subplots.js"></script>
+            <div id="mydiv"></div>
+            <script src="../static/js/scatter_plot.js"></script>
+                <!-- <div id="bar"></div>
+                <script src="../static/js/stacked_bar.js"></script> -->
+                <!-- <div id="sunburst"></div>
+                <script src="../static/js/sunburst/sunburst4.js"></script> -->
+        </div>
+    </div>
     <footer class="footer">
       <span class="bottom">Better Read Than Dead</span>
     </footer>
